CSS changes to forms for adding, removing, and updating. More error and success message adjustments. Fixing what breaks when selectors weren't advanced enough, attempting to generalize selectors to apply to as much as possible. Started on mobile sizing media query.

--- a/web/static/rvi/css/bootstrap-modified.css
+++ b/web/static/rvi/css/bootstrap-modified.css
@@ -2497,7 +2497,7 @@ input[type="checkbox"] {
   line-height: normal;
 }
 input[type="file"] {
-  display: block;
+  /*display: block;*/
 }
 input[type="range"] {
   display: block;
